Revert "(issue #3880) use overflow instead of padding"
This reverts commit a74d0b59e532c3d60f07acecff3bb6e6f9eb6452.

--- a/shared/oae/css/oae.components.css
+++ b/shared/oae/css/oae.components.css
@@ -887,9 +887,7 @@ div.oae-thumbnail i.fa {
 
 .oae-lhnavigation > ul.nav > li a div,
 .oae-lhnavigation > ul.nav > li button div {
-    overflow: auto;
-    padding-top: 8px;
-    word-break: break-word;
+    padding: 8px 0 0 31px;
 }
 
 .oae-lhnavigation > ul.nav > li {
